# concert_eye

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
guardian_eye/: alert_processor.py  config.py  schemas.py  synthesis_engine.py
guardian_eye/api/: main.py
guardian_eye/dashboard/: app.py
guardian_eye/message_queue/: kafka_consumer.py  kafka_producer.py
guardian_eye/utils/: mock_data.py
