[tool.poetry]
name = "guardian-eye"
version = "0.1.0"
description = "Integrated AI system for crowd monitoring and anomaly detection"
authors = ["Sanket Dhonde <sanketdhonde@example.com>"]
readme = "README.md"
packages = [{include = "guardian_eye"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
streamlit = "^1.28.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
langchain = "^0.0.350"
kafka-python = "^2.0.2"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
aioredis = "^2.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"